tests/parser_samples/valid/macros_def.mas
%m m1 {
    !nop;
}

%mi mi1 !nop;


%m m2 {
    !nop;
}

%mi mi2 !nop;

%i i1 { !nop; }