tests/parser_samples/invalid/multiline_macros_def/0.mas
%m a {

}

%i fake_i {
    a;
}